--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,13 +38,13 @@
   },
   "dependencies": {
     "@angular/animations": "^15.1.3",
-    "@angular/cdk": "^14.2.7",
+    "@angular/cdk": "^15.1.3",
     "@angular/common": "^15.1.3",
     "@angular/compiler": "^15.1.3",
     "@angular/core": "^15.1.3",
     "@angular/forms": "^15.1.3",
-    "@angular/material": "^14.2.7",
-    "@angular/material-moment-adapter": "^14.2.7",
+    "@angular/material": "^15.1.3",
+    "@angular/material-moment-adapter": "^15.1.3",
     "@angular/platform-browser": "^15.1.3",
     "@angular/platform-browser-dynamic": "^15.1.3",
     "@angular/router": "^15.1.3",
@@ -52,55 +52,55 @@
     "@ng-select/ng-select": "^9.1.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
-    "angular-oauth2-oidc": "^13.0.1",
-    "angular-server-side-configuration": "^14.0.1",
-    "bootstrap": "^5.2.2",
+    "angular-oauth2-oidc": "^15.0.1",
+    "angular-server-side-configuration": "^15.0.2",
+    "bootstrap": "^5.2.3",
     "jwt-decode": "^3.1.2",
     "maplibre-gl": "^2.4.0",
     "moment": "^2.29.4",
     "ngx-color-picker": "^13.0.0",
-    "rxjs": "~7.5.7",
-    "tslib": "^2.4.1",
-    "zone.js": "~0.12.0"
+    "rxjs": "^7.8.0",
+    "tslib": "^2.5.0",
+    "zone.js": "^0.12.0"
   },
   "optionalDependencies": {
-    "puppeteer": "^19.2.2"
+    "puppeteer": "^19.6.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.1.4",
-    "@angular-eslint/builder": "14.1.2",
-    "@angular-eslint/eslint-plugin": "14.1.2",
-    "@angular-eslint/eslint-plugin-template": "14.1.2",
-    "@angular-eslint/schematics": "14.1.2",
-    "@angular-eslint/template-parser": "14.1.2",
-    "@angular/cli": "^15.1.4",
+    "@angular-devkit/architect": "^0.1501.4",
+    "@angular-devkit/build-angular": "^15.1.3",
+    "@angular-eslint/builder": "15.2.0",
+    "@angular-eslint/eslint-plugin": "^15.2.0",
+    "@angular-eslint/eslint-plugin-template": "^15.2.0",
+    "@angular-eslint/schematics": "^15.2.0",
+    "@angular-eslint/template-parser": "^15.2.0",
+    "@angular/cli": "^15.1.3",
     "@angular/compiler-cli": "^15.1.3",
     "@angular/localize": "^15.1.3",
-    "@cypress/schematic": "^2.3.0",
+    "@cypress/schematic": "^2.5.0",
     "@openapitools/openapi-generator-cli": "^2.5.2",
-    "@playwright/test": "^1.27.1",
-    "@types/jasmine": "~4.3.0",
+    "@playwright/test": "^1.30.0",
+    "@types/jasmine": "^4.3.1",
     "@types/node": "^18.11.9",
-    "@types/puppeteer": "^7.0.4",
-    "@typescript-eslint/eslint-plugin": "^5.42.1",
-    "@typescript-eslint/parser": "^5.42.1",
-    "cypress": "^11.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
+    "cypress": "^12.5.1",
     "cypress-failed-log": "^2.10.0",
     "cypress-high-resolution": "^1.0.0",
-    "eslint": "^8.27.0",
-    "eslint-config-prettier": "^8.5.0",
-    "husky": "^8.0.2",
-    "jasmine-core": "~4.5.0",
-    "karma": "~6.4.1",
+    "eslint": "^8.33.0",
+    "eslint-config-prettier": "^8.6.0",
+    "husky": "^8.0.3",
+    "jasmine-core": "^4.5.0",
+    "karma": "^6.4.1",
     "karma-browserstack-launcher": "^1.6.0",
-    "karma-chrome-launcher": "~3.1.1",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
+    "karma-chrome-launcher": "^3.1.1",
+    "karma-coverage": "^2.2.0",
+    "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.0.0",
     "karma-sonarqube-reporter": "^1.4.0",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
-    "puppeteer": "^19.2.2",
-    "typescript": "~4.8.4"
+    "lint-staged": "^13.1.0",
+    "prettier": "^2.8.3",
+    "puppeteer": "^19.6.3",
+    "typescript": "^4.9.5"
   }
 }
