--- a/base-service/pom.xml
+++ b/base-service/pom.xml
@@ -50,6 +50,10 @@
          <artifactId>spring-cloud-starter-openfeign</artifactId>
          <groupId>org.springframework.cloud</groupId>
       </dependency>
+<!--      <dependency>-->
+<!--         <groupId>io.github.openfeign</groupId>-->
+<!--         <artifactId>feign-micrometer</artifactId>-->
+<!--      </dependency>-->
       <dependency>
          <artifactId>spring-boot-starter-web</artifactId>
          <groupId>org.springframework.boot</groupId>
