--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -23,12 +23,16 @@
          <artifactId>spring-boot-starter-actuator</artifactId>
       </dependency>
       <dependency>
-         <groupId>org.springframework.cloud</groupId>
-         <artifactId>spring-cloud-starter-gateway</artifactId>
+         <groupId>io.micrometer</groupId>
+         <artifactId>micrometer-tracing</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>io.micrometer</groupId>
+         <artifactId>micrometer-tracing-bridge-brave</artifactId>
       </dependency>
       <dependency>
          <groupId>org.springframework.cloud</groupId>
-         <artifactId>spring-cloud-starter-openfeign</artifactId>
+         <artifactId>spring-cloud-starter-gateway</artifactId>
       </dependency>
       <dependency>
          <groupId>org.springframework.boot</groupId>
