--- a/service-point-directory/pom.xml
+++ b/service-point-directory/pom.xml
@@ -90,6 +90,19 @@
          <artifactId>proj4j-epsg</artifactId>
       </dependency>
       <dependency>
+         <groupId>org.locationtech.jts</groupId>
+         <artifactId>jts-core</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>com.google.protobuf</groupId>
+         <artifactId>protoc</artifactId>
+         <type>pom</type>
+      </dependency>
+      <dependency>
+         <groupId>com.google.protobuf</groupId>
+         <artifactId>protobuf-java</artifactId>
+      </dependency>
+      <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-test</artifactId>
          <scope>test</scope>
