ATLAS-956: tracing with annotation

--- a/mail/src/main/resources/application-local.yml
+++ b/mail/src/main/resources/application-local.yml
@@ -53,3 +53,7 @@ kafka:
     mail:
       topic: atlas.mail
       groupId: atlas.kafka.mail.groupId
+
+logging:
+  pattern:
+    console: timestamp=%d thread=%t loglevel=%-5p class=%c appname=atlas traceid=%X{traceId} spanid=%X{spanId} message="%m"%n
