--- a/scheduling/src/main/resources/application-local.yml
+++ b/scheduling/src/main/resources/application-local.yml
@@ -123,3 +123,7 @@ atlas:
 mail:
   receiver:
     scheduling: TechSupport-ATLAS@sbb.ch
+
+logging:
+  pattern:
+    console: timestamp=%d thread=%t loglevel=%-5p class=%c appname=atlas traceid=%X{traceId} spanid=%X{spanId} message="%m"%n
