ATLAS-1004: Initial entity and module setup

--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
       <module>import-service-point</module>
       <module>user-administration</module>
       <module>workflow</module>
+      <module>timetable-hearing</module>
       <!-- Combine APIs -->
       <module>apim-configuration</module>
       <module>gateway</module>
