--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,70 +37,68 @@
     "frontend/src/**/*": "frontend/node_modules/prettier/bin-prettier.js --write --ignore-unknown"
   },
   "dependencies": {
-    "@angular/animations": "^15.1.3",
-    "@angular/cdk": "^15.1.3",
-    "@angular/common": "^15.1.3",
-    "@angular/compiler": "^15.1.3",
-    "@angular/core": "^15.1.3",
-    "@angular/forms": "^15.1.3",
-    "@angular/material": "^15.1.3",
-    "@angular/material-moment-adapter": "^15.1.3",
-    "@angular/platform-browser": "^15.1.3",
-    "@angular/platform-browser-dynamic": "^15.1.3",
-    "@angular/router": "^15.1.3",
-    "@angular/service-worker": "^15.1.3",
-    "@ng-select/ng-select": "^9.1.0",
-    "@ngx-translate/core": "^14.0.0",
-    "@ngx-translate/http-loader": "^7.0.0",
-    "angular-oauth2-oidc": "^15.0.1",
-    "angular-server-side-configuration": "^15.0.2",
-    "bootstrap": "^5.2.3",
-    "jwt-decode": "^3.1.2",
-    "maplibre-gl": "^2.4.0",
-    "moment": "^2.29.4",
-    "ngx-color-picker": "^13.0.0",
-    "rxjs": "^7.8.0",
-    "tslib": "^2.5.0",
-    "zone.js": "^0.12.0"
+    "@angular/animations": "15.1.5",
+    "@angular/cdk": "15.1.5",
+    "@angular/common": "15.1.5",
+    "@angular/compiler": "15.1.5",
+    "@angular/core": "15.1.5",
+    "@angular/forms": "15.1.5",
+    "@angular/material": "15.1.5",
+    "@angular/material-moment-adapter": "15.1.5",
+    "@angular/platform-browser": "15.1.5",
+    "@angular/platform-browser-dynamic": "15.1.5",
+    "@angular/router": "15.1.5",
+    "@angular/service-worker": "15.1.5",
+    "@ng-select/ng-select": "10.0",
+    "@ngx-translate/core": "^14.0",
+    "@ngx-translate/http-loader": "^7.0",
+    "angular-oauth2-oidc": "^15.0",
+    "angular-server-side-configuration": "^15.0",
+    "bootstrap": "^5.2",
+    "jwt-decode": "^3.1",
+    "maplibre-gl": "^2.4",
+    "moment": "^2.0",
+    "ngx-color-picker": "^13.0",
+    "rxjs": "^7.8",
+    "tslib": "^2.5",
+    "zone.js": "^0.12"
   },
   "optionalDependencies": {
-    "puppeteer": "^19.6.3"
+    "puppeteer": "^19.7"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "^0.1501.4",
-    "@angular-devkit/build-angular": "^15.1.3",
-    "@angular-eslint/builder": "15.2.0",
-    "@angular-eslint/eslint-plugin": "^15.2.0",
-    "@angular-eslint/eslint-plugin-template": "^15.2.0",
-    "@angular-eslint/schematics": "^15.2.0",
-    "@angular-eslint/template-parser": "^15.2.0",
-    "@angular/cli": "^15.1.3",
-    "@angular/compiler-cli": "^15.1.3",
-    "@angular/localize": "^15.1.3",
-    "@cypress/schematic": "^2.5.0",
-    "@openapitools/openapi-generator-cli": "^2.5.2",
-    "@playwright/test": "^1.30.0",
-    "@types/jasmine": "^4.3.1",
-    "@types/node": "^18.11.9",
-    "@typescript-eslint/eslint-plugin": "^5.51.0",
-    "@typescript-eslint/parser": "^5.51.0",
-    "cypress": "^12.5.1",
-    "cypress-failed-log": "^2.10.0",
-    "cypress-high-resolution": "^1.0.0",
-    "eslint": "^8.33.0",
-    "eslint-config-prettier": "^8.6.0",
-    "husky": "^8.0.3",
-    "jasmine-core": "^4.5.0",
-    "karma": "^6.4.1",
-    "karma-browserstack-launcher": "^1.6.0",
-    "karma-chrome-launcher": "^3.1.1",
-    "karma-coverage": "^2.2.0",
-    "karma-jasmine": "^5.1.0",
-    "karma-jasmine-html-reporter": "^2.0.0",
-    "karma-sonarqube-reporter": "^1.4.0",
-    "lint-staged": "^13.1.0",
-    "prettier": "^2.8.3",
-    "puppeteer": "^19.6.3",
-    "typescript": "^4.9.5"
+    "@angular-devkit/architect": "0.x",
+    "@angular-devkit/build-angular": "15.1.5",
+    "@angular-eslint/builder": "^15.2",
+    "@angular-eslint/eslint-plugin": "^15.2",
+    "@angular-eslint/eslint-plugin-template": "^15.2",
+    "@angular-eslint/schematics": "^15.2",
+    "@angular-eslint/template-parser": "^15.2",
+    "@angular/cli": "15.1.5",
+    "@angular/localize": "15.1.5",
+    "@cypress/schematic": "^2.5",
+    "@openapitools/openapi-generator-cli": "~2.5",
+    "@playwright/test": "^1.30",
+    "@types/jasmine": "^4.3",
+    "@types/node": "^18.13",
+    "@typescript-eslint/eslint-plugin": "^5.53",
+    "@typescript-eslint/parser": "^5.53",
+    "cypress": "^12.6",
+    "cypress-failed-log": "^2.10",
+    "cypress-high-resolution": "^1.0",
+    "eslint": "^8.34",
+    "eslint-config-prettier": "^8.6",
+    "husky": "^8.0",
+    "jasmine-core": "^4.5",
+    "karma": "^6.4",
+    "karma-browserstack-launcher": "^1.6",
+    "karma-chrome-launcher": "^3.1",
+    "karma-coverage": "^2.2",
+    "karma-jasmine": "^5.1",
+    "karma-jasmine-html-reporter": "^2.0",
+    "karma-sonarqube-reporter": "^1.4",
+    "lint-staged": "^13.1",
+    "prettier": "^2.8",
+    "typescript": "^4.9"
   }
 }
