--- a/service-point-directory/pom.xml
+++ b/service-point-directory/pom.xml
@@ -129,6 +129,11 @@
          <scope>test</scope>
       </dependency>
       <dependency>
+         <artifactId>spring-auto-restdocs-core</artifactId>
+         <groupId>capital.scalable</groupId>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
          <artifactId>h2</artifactId>
          <groupId>com.h2database</groupId>
          <scope>test</scope>
