--- a/service-point-directory/pom.xml
+++ b/service-point-directory/pom.xml
@@ -170,6 +170,26 @@
             <artifactId>jacoco-maven-plugin</artifactId>
             <groupId>org.jacoco</groupId>
          </plugin>
+         <plugin>
+            <groupId>com.github.os72</groupId>
+            <artifactId>protoc-jar-maven-plugin</artifactId>
+            <version>3.11.4</version>
+            <executions>
+               <execution>
+                  <phase>generate-sources</phase>
+                  <goals>
+                     <goal>run</goal>
+                  </goals>
+                  <configuration>
+                     <protocVersion>${protoc.version}</protocVersion>
+                     <inputDirectories>
+                        <include>src/main/resources/protobuf</include>
+                     </inputDirectories>
+                     <outputDirectory>${project.build.directory}/generated-sources/protobuf</outputDirectory>
+                  </configuration>
+               </execution>
+            </executions>
+         </plugin>
       </plugins>
    </build>
 </project>
