--- a/service-point-directory/pom.xml
+++ b/service-point-directory/pom.xml
@@ -154,6 +154,13 @@
             <filtering>true</filtering>
          </testResource>
       </testResources>
+      <extensions>
+         <extension>
+            <groupId>kr.motd.maven</groupId>
+            <artifactId>os-maven-plugin</artifactId>
+            <version>1.7.1</version>
+         </extension>
+      </extensions>
       <plugins>
          <plugin>
             <groupId>org.springframework.boot</groupId>
@@ -171,24 +178,22 @@
             <groupId>org.jacoco</groupId>
          </plugin>
          <plugin>
-            <groupId>com.github.os72</groupId>
-            <artifactId>protoc-jar-maven-plugin</artifactId>
-            <version>3.11.4</version>
+            <groupId>org.xolstice.maven.plugins</groupId>
+            <artifactId>protobuf-maven-plugin</artifactId>
+            <version>0.6.1</version>
+            <extensions>true</extensions>
             <executions>
                <execution>
-                  <phase>generate-sources</phase>
                   <goals>
-                     <goal>run</goal>
+                     <goal>compile</goal>
+                     <goal>test-compile</goal>
                   </goals>
-                  <configuration>
-                     <protocVersion>${protoc.version}</protocVersion>
-                     <inputDirectories>
-                        <include>src/main/resources/protobuf</include>
-                     </inputDirectories>
-                     <outputDirectory>${project.build.directory}/generated-sources/protobuf</outputDirectory>
-                  </configuration>
                </execution>
             </executions>
+            <configuration>
+               <protoSourceRoot>${project.basedir}/src/main/resources/protobuf</protoSourceRoot>
+               <protocArtifact>com.google.protobuf:protoc:${protoc.version}:exe:${os.detected.classifier}</protocArtifact>
+            </configuration>
          </plugin>
       </plugins>
    </build>
