ATLAS-1018: Api first draft

--- a/timetable-hearing/src/test/resources/application-integration-test.yml
+++ b/timetable-hearing/src/test/resources/application-integration-test.yml
@@ -44,3 +44,10 @@ info:
   app:
     name: timetable-hearing
     version: @version@
+
+kafka:
+  atlas:
+    user:
+      administration:
+        topic: atlas.user.administration
+        groupId: atlas.kafka.timetable.hearing.user.administration.groupId
