ATLAS-1018: Provide API for SKIW with active year and ttfnid resolver

--- a/timetable-hearing/src/test/resources/application-integration-test.yml
+++ b/timetable-hearing/src/test/resources/application-integration-test.yml
@@ -51,3 +51,7 @@ kafka:
       administration:
         topic: atlas.user.administration
         groupId: atlas.kafka.timetable.hearing.user.administration.groupId
+atlas:
+  client:
+    gateway:
+      url: "http://localhost:8888"
