--- a/line-directory/src/main/resources/application-local.yml
+++ b/line-directory/src/main/resources/application-local.yml
@@ -8,10 +8,10 @@ spring:
     name: line-directory
   jpa:
     open-in-view: false
-  #    show-sql: true
-  #    properties:
-  #      hibernate:
-  #        format_sql: true
+    show-sql: false
+    properties:
+      hibernate:
+        format_sql: true
   jmx:
     enabled: true
   security:
