--- a/timetable-hearing/src/main/resources/application-local.yml
+++ b/timetable-hearing/src/main/resources/application-local.yml
@@ -74,3 +74,7 @@ info:
     name: timetable-hearing
     version: @version@
     buildtime: @timestamp@
+atlas:
+  client:
+    gateway:
+      url: "http://localhost:8888"
