ATLAS-1018: Move to LiDi

--- a/line-directory/src/main/resources/application-local.yml
+++ b/line-directory/src/main/resources/application-local.yml
@@ -80,3 +80,8 @@ amazon:
   region: "eu-central-1"
   bucketName: "atlas-data-export-dev-dev"
   objectExpirationDays: 30
+
+atlas:
+  client:
+    gateway:
+      url: "http://localhost:8888"
