ATLAS-1018: Configuratively Hide stuff from api documentation

--- a/apim-configuration/src/main/resources/application.yml
+++ b/apim-configuration/src/main/resources/application.yml
@@ -3,3 +3,6 @@ production:
     - line-directory
     - business-organisation-directory
     - user-administration
+  excludePatterns:
+    - timetable-hearing
+    - TimetableHearing
