--- a/line-directory/src/main/resources/application-local.yml
+++ b/line-directory/src/main/resources/application-local.yml
@@ -12,6 +12,10 @@ spring:
     properties:
       hibernate:
         format_sql: true
+  servlet:
+    multipart:
+      max-file-size: 20MB
+      max-request-size: 20MB
   jmx:
     enabled: true
   security:
