--- a/service-point-directory/pom.xml
+++ b/service-point-directory/pom.xml
@@ -171,6 +171,7 @@
             <groupId>org.asciidoctor</groupId>
          </plugin>
          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
          </plugin>
          <plugin>
