--- a/business-organisation-directory/src/test/resources/application-integration-test.yml
+++ b/business-organisation-directory/src/test/resources/application-integration-test.yml
@@ -46,11 +46,18 @@ logging:
         test: error
         web: error
 amazon:
-  accessKey: ${AMAZON_S3_ACCESS_KEY}
-  secretKey: ${AMAZON_S3_SECRET_KEY}
   region: "eu-central-1"
-  bucketName: "atlas-data-export-dev-dev"
-  objectExpirationDays: 30
+  bucketConfigs:
+    export-files:
+      accessKey: ${AMAZON_S3_ACCESS_KEY}
+      secretKey: ${AMAZON_S3_SECRET_KEY}
+      bucketName: "atlas-data-export-dev-dev"
+      objectExpirationDays: 30
+    hearing-documents:
+      accessKey: ${AMAZON_S3_HEARING_DOCS_ACCESS_KEY}
+      secretKey: ${AMAZON_S3_HEARING_DOCS_SECRET_KEY}
+      bucketName: "atlas-hearing-documents-dev-dev"
+      objectExpirationDays: 100000
 
 kafka:
   atlas:
