--- a/import-service-point/src/test/resources/application-integration-test.yml
+++ b/import-service-point/src/test/resources/application-integration-test.yml
@@ -88,10 +88,17 @@ mail:
     import-service-point: TechSupport-ATLAS@sbb.ch
 
 amazon:
-  accessKey: ${AMAZON_S3_ACCESS_KEY}
-  secretKey: ${AMAZON_S3_SECRET_KEY}
   region: "eu-central-1"
-  bucketName: "atlas-data-export-dev-dev"
-  objectExpirationDays: 30
+  bucketConfigs:
+    export-files:
+      accessKey: ${AMAZON_S3_ACCESS_KEY}
+      secretKey: ${AMAZON_S3_SECRET_KEY}
+      bucketName: "atlas-data-export-dev-dev"
+      objectExpirationDays: 30
+    hearing-documents:
+      accessKey: ${AMAZON_S3_HEARING_DOCS_ACCESS_KEY}
+      secretKey: ${AMAZON_S3_HEARING_DOCS_SECRET_KEY}
+      bucketName: "atlas-hearing-documents-dev-dev"
+      objectExpirationDays: 100000
 
 
