ATLAS-1120: WIP add new amazon bucket and adjust config files

--- a/line-directory/src/main/resources/application-local.yml
+++ b/line-directory/src/main/resources/application-local.yml
@@ -79,11 +79,18 @@ logging:
     root: INFO
     org.hibernate: ERROR
 amazon:
-  accessKey: ${AMAZON_S3_ACCESS_KEY}
-  secretKey: ${AMAZON_S3_SECRET_KEY}
   region: "eu-central-1"
-  bucketName: "atlas-data-export-dev-dev"
-  objectExpirationDays: 30
+  bucketConfigs:
+    export-files:
+      accessKey: ${AMAZON_S3_ACCESS_KEY}
+      secretKey: ${AMAZON_S3_SECRET_KEY}
+      bucketName: "atlas-data-export-dev-dev"
+      objectExpirationDays: 30
+    hearing-documents:
+      accessKey: ${AMAZON_S3_HEARING_DOCS_ACCESS_KEY}
+      secretKey: ${AMAZON_S3_HEARING_DOCS_SECRET_KEY}
+      bucketName: "atlas-hearing-documents-dev-dev"
+      objectExpirationDays: 100000
 
 atlas:
   client:
