ATLAS-1095: Add service test

--- a/user-administration/src/main/resources/application-local.yml
+++ b/user-administration/src/main/resources/application-local.yml
@@ -17,7 +17,7 @@ spring:
     name: user-administration
   jpa:
     open-in-view: false
-    show-sql: true
+    show-sql: false
     properties:
       hibernate:
         format_sql: true
