ATLAS-1120: Change multiple amazon buckets implementation, remove Bean Qualifiers

--- a/line-directory/src/main/resources/application-local.yml
+++ b/line-directory/src/main/resources/application-local.yml
@@ -81,7 +81,7 @@ logging:
 amazon:
   region: "eu-central-1"
   bucketConfigs:
-    export-files:
+    export:
       accessKey: ${AMAZON_S3_ACCESS_KEY}
       secretKey: ${AMAZON_S3_SECRET_KEY}
       bucketName: "atlas-data-export-dev-dev"
