ATLAS-1120: WIP Upload documents to Amazon S3.

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
       <flyway-db.version>9.14.0</flyway-db.version>
       <swagger-core.version>2.2.8</swagger-core.version>
       <hibernate.jpa-modelgen.version>6.1.7.Final</hibernate.jpa-modelgen.version>
+      <tika-core.version>2.7.0</tika-core.version>
 
       <!-- REST Doc -->
       <asciidoctor-plugin.version>2.2.2</asciidoctor-plugin.version>
@@ -135,6 +136,11 @@
             <artifactId>spring-auto-restdocs-core</artifactId>
             <version>${spring-auto-rest-docs-core.version}</version>
             <scope>test</scope>
+         </dependency>
+         <dependency>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-core</artifactId>
+            <version>${tika-core.version}</version>
          </dependency>
       </dependencies>
    </dependencyManagement>
