--- a/line-directory/pom.xml
+++ b/line-directory/pom.xml
@@ -111,6 +111,10 @@
          <groupId>capital.scalable</groupId>
          <scope>test</scope>
       </dependency>
+      <dependency>
+         <groupId>org.apache.tika</groupId>
+         <artifactId>tika-core</artifactId>
+      </dependency>
    </dependencies>
    <build>
       <testResources>
@@ -129,6 +133,7 @@
             <groupId>org.springframework.boot</groupId>
          </plugin>
          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
          </plugin>
          <plugin>
@@ -136,6 +141,7 @@
             <groupId>org.jacoco</groupId>
          </plugin>
          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
          </plugin>
       </plugins>
