--- a/line-directory/src/main/resources/application-local.yml
+++ b/line-directory/src/main/resources/application-local.yml
@@ -1,3 +1,4 @@
+
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5433/line-directory?currentSchema=line_directory
@@ -14,8 +15,8 @@ spring:
         format_sql: true
   servlet:
     multipart:
-      max-file-size: 20MB
-      max-request-size: 20MB
+      max-file-size: 21MB
+      max-request-size: 21MB
   jmx:
     enabled: true
   security:
@@ -47,6 +48,8 @@ spring:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       retries: 1
+
+
 
 kafka:
   atlas:
@@ -81,7 +84,7 @@ logging:
 amazon:
   region: "eu-central-1"
   bucketConfigs:
-    export:
+    export-files:
       accessKey: ${AMAZON_S3_ACCESS_KEY}
       secretKey: ${AMAZON_S3_SECRET_KEY}
       bucketName: "atlas-data-export-dev-dev"
@@ -96,3 +99,4 @@ atlas:
   client:
     gateway:
       url: "http://localhost:8888"
+
