--- a/base-atlas/pom.xml
+++ b/base-atlas/pom.xml
@@ -78,7 +78,7 @@
          <groupId>com.fasterxml.jackson.dataformat</groupId>
       </dependency>
       <dependency>
-         <artifactId>aws-java-sdk</artifactId>
+         <artifactId>aws-java-sdk-s3</artifactId>
          <groupId>com.amazonaws</groupId>
       </dependency>
       <!-- Needed for AWS -->
