--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
       <artifactId>spring-boot-starter-parent</artifactId>
       <groupId>org.springframework.boot</groupId>
       <relativePath/>
-      <version>3.0.3</version>
+      <version>3.0.4</version>
    </parent>
    <groupId>ch.sbb.atlas</groupId>
    <artifactId>atlas</artifactId>
@@ -119,9 +119,9 @@
             <version>${protoc.version}</version>
          </dependency>
          <dependency>
-            <artifactId>aws-java-sdk</artifactId>
+            <artifactId>aws-java-sdk-s3</artifactId>
             <groupId>com.amazonaws</groupId>
-            <version>1.12.316</version>
+            <version>1.12.430</version>
          </dependency>
 
          <dependency>
