--- a/pom.xml
+++ b/pom.xml
@@ -244,6 +244,16 @@
                <groupId>org.apache.maven.plugins</groupId>
                <version>${maven-source-plugin.version}</version>
             </plugin>
+            <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-resources-plugin</artifactId>
+               <configuration>
+                  <propertiesEncoding>UTF-8</propertiesEncoding>
+                  <nonFilteredFileExtensions>
+                     <nonFilteredFileExtension>pdf</nonFilteredFileExtension>
+                  </nonFilteredFileExtensions>
+               </configuration>
+            </plugin>
          </plugins>
       </pluginManagement>
    </build>
