--- a/user-administration/src/test/resources/application-integration-test.yml
+++ b/user-administration/src/test/resources/application-integration-test.yml
@@ -8,6 +8,12 @@ spring:
     console:
       enabled: true
       path: /h2-console
+  jpa:
+    open-in-view: false
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
   main:
     banner-mode: OFF
   kafka:
