ATLAS-1120:Add changes for update timetablehearing

--- a/line-directory/src/test/resources/application-integration-test.yml
+++ b/line-directory/src/test/resources/application-integration-test.yml
@@ -69,3 +69,6 @@ atlas:
   client:
     gateway:
       url: "http://localhost:8888"
+  timetablehearing:
+    max-number-pdfs: 3
+    max-size-pdfs: 20
