--- a/user-administration/src/test/resources/application-integration-test.yml
+++ b/user-administration/src/test/resources/application-integration-test.yml
@@ -10,7 +10,7 @@ spring:
       path: /h2-console
   jpa:
     open-in-view: false
-    show-sql: true
+    show-sql: false
     properties:
       hibernate:
         format_sql: true
