--- a/line-directory/src/test/resources/application-integration-test.yml
+++ b/line-directory/src/test/resources/application-integration-test.yml
@@ -20,6 +20,8 @@ spring:
       resourceserver:
         jwt:
           issuer-uri: https://login.microsoftonline.com/2cda5d11-f0ac-46b3-967d-af1b2e1bd01a/v2.0
+  kafka:
+    bootstrap-servers: .bootstrap-servers=${spring.embedded.kafka.brokers}
 
 auth:
   audience:
