--- a/business-organisation-directory/src/test/resources/application-integration-test.yml
+++ b/business-organisation-directory/src/test/resources/application-integration-test.yml
@@ -22,6 +22,9 @@ spring:
           issuer-uri: https://login.microsoftonline.com/2cda5d11-f0ac-46b3-967d-af1b2e1bd01a/v2.0
   kafka:
     bootstrap-servers: .bootstrap-servers=${spring.embedded.kafka.brokers}
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 auth:
   audience:
     service-name: 87e6e634-6ba1-4e7a-869d-3348b4c3eafc
@@ -70,6 +73,10 @@ kafka:
       administration:
         topic: atlas.user.administration
         groupId: atlas.kafka.bodi.user.administration.groupId
+    business:
+      organisation:
+        topic: atlas.business.organisation
+        groupId: atlas.kafka.lidi.business.organisation.groupId
 mail:
   receiver:
     tu-relations-report: TechSupport-ATLAS@sbb.ch
