--- a/line-directory/src/main/resources/application-local.yml
+++ b/line-directory/src/main/resources/application-local.yml
@@ -58,6 +58,10 @@ kafka:
       organisation:
         topic: atlas.business.organisation
         groupId: atlas.kafka.lidi.business.organisation.groupId
+    transport:
+      company:
+        topic: atlas.transport.company
+        groupId: atlas.kafka.lidi.transport.company.groupId
 auth:
   audience:
     service-name: 87e6e634-6ba1-4e7a-869d-3348b4c3eafc
