ATLAS-1294: Fix Build

--- a/line-directory/src/test/resources/application-integration-test.yml
+++ b/line-directory/src/test/resources/application-integration-test.yml
@@ -69,7 +69,11 @@ kafka:
     business:
       organisation:
         topic: atlas.business.organisation
-        groupId: atlas.kafka.bodi.business.organisation.groupId
+        groupId: atlas.kafka.lidi.business.organisation.groupId
+    transport:
+      company:
+        topic: atlas.transport.company
+        groupId: atlas.kafka.lidi.transport.company.groupId
 
 atlas:
   client:
