--- a/business-organisation-directory/src/test/resources/application-integration-test.yml
+++ b/business-organisation-directory/src/test/resources/application-integration-test.yml
@@ -76,7 +76,11 @@ kafka:
     business:
       organisation:
         topic: atlas.business.organisation
-        groupId: atlas.kafka.lidi.business.organisation.groupId
+        groupId: atlas.kafka.bodi.business.organisation.groupId
+    transport:
+      company:
+        topic: atlas.transport.company
+        groupId: atlas.kafka.bodi.transport.company.groupId
 mail:
   receiver:
     tu-relations-report: TechSupport-ATLAS@sbb.ch
