ATLAS-1294: Integrate sboid exists to sepodi

--- a/service-point-directory/src/test/resources/application-integration-test.yml
+++ b/service-point-directory/src/test/resources/application-integration-test.yml
@@ -57,3 +57,7 @@ kafka:
       administration:
         topic: atlas.user.administration
         groupId: atlas.kafka.lidi.user.administration.groupId
+    business:
+      organisation:
+        topic: atlas.business.organisation
+        groupId: atlas.kafka.spdi.business.organisation.groupId
