ATLAS-1294: Integrate sboid exists to sepodi

--- a/service-point-directory/src/main/resources/application-local.yml
+++ b/service-point-directory/src/main/resources/application-local.yml
@@ -67,6 +67,10 @@ kafka:
       administration:
         topic: atlas.user.administration
         groupId: atlas.kafka.spdi.user.administration.groupId
+    business:
+      organisation:
+        topic: atlas.business.organisation
+        groupId: atlas.kafka.spdi.business.organisation.groupId
 
 auth:
   audience:
