--- a/base-atlas/src/test/resources/application-integration-test.yml
+++ b/base-atlas/src/test/resources/application-integration-test.yml
@@ -15,6 +15,11 @@ spring:
     properties:
       hibernate:
         format_sql: true
+  kafka:
+    bootstrap-servers: .bootstrap-servers=${spring.embedded.kafka.brokers}
+    consumer:
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
 
 atlas:
   client:
