--- a/scheduling/src/main/resources/application-local.yml
+++ b/scheduling/src/main/resources/application-local.yml
@@ -108,6 +108,8 @@ scheduler:
       chron: "0 30 5 * * ?" #At 05:30:00am every day
     contact-point-trigger-batch:
       chron: "0 35 5 * * ?" #At 05:35:00am every day
+    relation-trigger-batch:
+      chron: "0 40 5 * * ?" #At 05:40:00am every day
 
   lidi:
     export:
