--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
    <properties>
       <!-- Project Settings -->
       <java.version>21</java.version>
+      <flyway.version>10.1.0</flyway.version>
       <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
       <timestamp>${maven.build.timestamp}</timestamp>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
