--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,5 @@ frontend/.npmrc
 
 /line-directory/export/
 /.export/
+/frontend/cypress/test-results/
+/frontend/cypress-mochawesome-reporter.log
