ATLAS-1190: create rest doc lib

--- a/base-atlas/pom.xml
+++ b/base-atlas/pom.xml
@@ -113,6 +113,13 @@
       </dependency>
 
       <dependency>
+         <artifactId>auto-rest-doc</artifactId>
+         <groupId>ch.sbb.atlas</groupId>
+         <version>1.702.0</version>
+         <scope>test</scope>
+         <type>test-jar</type>
+      </dependency>
+      <dependency>
          <artifactId>kafka</artifactId>
          <groupId>ch.sbb.atlas</groupId>
          <version>1.702.0</version>
