ATLAS-1480: run location sync every day

--- a/scheduling/src/main/resources/application-local.yml
+++ b/scheduling/src/main/resources/application-local.yml
@@ -159,7 +159,7 @@ scheduler:
 
   location:
     sync:
-      chron: "0 0 6 * * 1" #At 06:00 AM, only on Monday
+      chron: "0 0 6 * * ?" #At 06:00 every day
 
 atlas:
   client:
