ATLAS-1937: use new wsdl and document wsdl getting and truststore generation process

--- a/business-organisation-directory/pom.xml
+++ b/business-organisation-directory/pom.xml
@@ -189,6 +189,7 @@
                   </goals>
                   <configuration>
                      <wsdlFiles>
+                        <!-- File from: https://crdservice-online.rne.eu/CRD/wsdl/CRDRFDataReplicationWS -->
                         <wsdlFile>crd.wsdl</wsdlFile>
                      </wsdlFiles>
                      <packageName>ch.sbb.business.organisation.directory.service.crd</packageName>
