--- a/service-point-directory/src/test/resources/application-integration-test.yml
+++ b/service-point-directory/src/test/resources/application-integration-test.yml
@@ -1,4 +1,8 @@
 spring:
+  data:
+    web:
+      pageable:
+        max-page-size: 10_000
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
