ATLAS-1967: wip: try argument resolver for pageable validation

--- a/service-point-directory/src/main/resources/application-local.yml
+++ b/service-point-directory/src/main/resources/application-local.yml
@@ -13,6 +13,10 @@ management:
         include: health, info, metrics
 
 spring:
+  data:
+    web:
+      pageable:
+        max-page-size: 10_000
   datasource:
     url: jdbc:postgresql://localhost:5439/service-point-directory?currentSchema=service_point_directory
     username: user
