ATLAS-1972: further test log cleanup

--- a/prm-directory/src/test/resources/application-integration-test.yml
+++ b/prm-directory/src/test/resources/application-integration-test.yml
@@ -54,6 +54,7 @@ logging:
           test: error
         test: error
         web: error
+    ch.sbb.atlas.api.model.ErrorResponse: off
 info:
   app:
     name: prm-directory
