--- a/business-organisation-directory/src/test/resources/application-integration-test.yml
+++ b/business-organisation-directory/src/test/resources/application-integration-test.yml
@@ -50,6 +50,7 @@ logging:
           test: error
         test: error
         web: error
+    ch.sbb.atlas.api.model.ErrorResponse: off
 amazon:
   region: "eu-central-1"
   bucketConfigs:
