--- a/service-point-directory/src/test/resources/application-integration-test.yml
+++ b/service-point-directory/src/test/resources/application-integration-test.yml
@@ -67,6 +67,7 @@ logging:
           test: error
         test: error
         web: error
+    ch.sbb.atlas.api.model.ErrorResponse: off
 info:
   app:
     name: service-point-directory
