--- a/user-administration/src/test/resources/application-integration-test.yml
+++ b/user-administration/src/test/resources/application-integration-test.yml
@@ -42,6 +42,7 @@ logging:
           test: error
         test: error
         web: error
+    ch.sbb.atlas.api.model.ErrorResponse: off
 info:
   app:
     name: user-administration
