ATLAS-1972: Final log cleanup

--- a/location/src/test/resources/application-integration-test.yml
+++ b/location/src/test/resources/application-integration-test.yml
@@ -8,6 +8,8 @@ spring:
     console:
       enabled: true
       path: /h2-console
+  main:
+    banner-mode: OFF
   security:
     oauth2:
       resourceserver:
