ATLAS-1967: add PagingConfig to other services which uses pageables

--- a/prm-directory/src/test/resources/application-integration-test.yml
+++ b/prm-directory/src/test/resources/application-integration-test.yml
@@ -34,6 +34,10 @@ spring:
 
   kafka:
     bootstrap-servers: .bootstrap-servers=${spring.embedded.kafka.brokers}
+  data:
+    web:
+      pageable:
+        max-page-size: 10_000
 
 auth:
   audience:
