ATLAS-1967: add PagingConfig to other services which uses pageables

--- a/prm-directory/src/main/resources/application-local.yml
+++ b/prm-directory/src/main/resources/application-local.yml
@@ -59,6 +59,10 @@ spring:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       retries: 1
+  data:
+    web:
+      pageable:
+        max-page-size: 10_000
 
 kafka:
   atlas:
