--- a/business-organisation-directory/src/main/resources/application-local.yml
+++ b/business-organisation-directory/src/main/resources/application-local.yml
@@ -1,4 +1,8 @@
 spring:
+  data:
+    web:
+      pageable:
+        max-page-size: 10_000
   datasource:
     url: jdbc:postgresql://localhost:5435/business-organisation-directory?currentSchema=business_organisation_directory
     username: user
