--- a/line-directory/src/main/resources/application-local.yml
+++ b/line-directory/src/main/resources/application-local.yml
@@ -1,4 +1,8 @@
 spring:
+  data:
+    web:
+      pageable:
+        max-page-size: 10_000
   datasource:
     url: jdbc:postgresql://localhost:5433/line-directory?currentSchema=line_directory
     username: user
