ATLAS-2136: Testcontainers first try

--- a/business-organisation-directory/src/test/resources/application-integration-test.yml
+++ b/business-organisation-directory/src/test/resources/application-integration-test.yml
@@ -1,7 +1,9 @@
 spring:
+  test:
+    database:
+      replace: none
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+    url: jdbc:tc:postgresql:16-alpine:///db
     username: sa
     password: sa
   h2:
