ATLAS-2136: enable info logs

--- a/business-organisation-directory/src/test/resources/application-integration-test.yml
+++ b/business-organisation-directory/src/test/resources/application-integration-test.yml
@@ -39,7 +39,7 @@ external:
     url: https://www.output.tu-verzeichnisse.bav.admin.ch
 logging:
   level:
-    root: ERROR
+    root: INFO
     org:
       hibernate: ERROR
       jboss: ERROR
