ATLAS-2136: try to simplify dependencies

--- a/base-atlas/src/test/resources/application-integration-test.yml
+++ b/base-atlas/src/test/resources/application-integration-test.yml
@@ -6,6 +6,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
+    generate-ddl: true
   kafka:
     bootstrap-servers: .bootstrap-servers=${spring.embedded.kafka.brokers}
     consumer:
