ATLAS-2136: reset to current state

--- a/business-organisation-directory/src/test/resources/application-integration-test.yml
+++ b/business-organisation-directory/src/test/resources/application-integration-test.yml
@@ -28,7 +28,7 @@ external:
     url: https://www.output.tu-verzeichnisse.bav.admin.ch
 logging:
   level:
-    root: INFO
+    root: ERROR
     org:
       hibernate: ERROR
       jboss: ERROR
